--- a/src/shreyPlot/shreyPlot.component.html
+++ b/src/shreyPlot/shreyPlot.component.html
@@ -3,6 +3,7 @@
     <div *ngFor="let val of values">
       <div>{{val.path}}</div>
       <div>{{val.value}}</div>
+      <div>{{val.timestamp}}</div>
       <hr>
     </div>
   </div>
