--- a/src/shreyPlot/shreyPlot.component.html
+++ b/src/shreyPlot/shreyPlot.component.html
@@ -1,9 +1,7 @@
 <div class="top" [style.background]="bkColor">
   <div class="items" [style.color]="fgColor">
-    <div *ngFor="let val of values">
-      <div>{{val.path}}</div>
-      <div>{{val.value}}</div>
-      <div>{{val.timestamp}}</div>
+    <div *ngFor = "let val of values" >
+      <div>{{val}}</div>
       <hr>
     </div>
   </div>
