--- a/src/shreyPlot/shreyPlot.component.html
+++ b/src/shreyPlot/shreyPlot.component.html
@@ -1,8 +1,5 @@
 <div class="top" [style.background]="bkColor">
   <div class="items" [style.color]="fgColor">
-    <div *ngFor = "let val of values" >
-      <div>{{val}}</div>
-      <hr>
-    </div>
+    <canvas id="myChart" width="400" height="400"></canvas> 
   </div>
 </div>
