--- a/src/shreyPlot/shreyPlot.component.html
+++ b/src/shreyPlot/shreyPlot.component.html
@@ -1,5 +1,18 @@
 <div class="top" [style.background]="bkColor">
   <div class="items" [style.color]="fgColor">
-    <canvas id="myChart" width="400" height="400"></canvas> 
-  </div>
+      <canvas id="myChart" width="400" height="400"></canvas>
+      <!-- <div class="grid-container">
+          <div class="grid-item">
+              <canvas id="myChart" width="400" height="400"></canvas> 
+          </div>
+          
+          <div class="grid-item">
+              <canvas id="myChart2" width="400" height="400"></canvas> 
+          </div>
+          <div class="grid-item">3</div>
+          <div class="grid-item">4</div>
+        
+    <!-- <canvas id="myChart" width="400" height="400"></canvas> 
+    <canvas id="myChart2" width="400" height="400"></canvas>  -->
+  </div>  
 </div>
