--- a/src/shreyPlot/shreyPlot.component.css
+++ b/src/shreyPlot/shreyPlot.component.css
@@ -17,7 +17,7 @@
 .grid-container {
   display: grid;
   grid-template-columns: auto auto;
-  background-color: #2196F3;
+  background-color: rgb(245, 245, 245);
   padding: 10px;
 }
 .grid-item {
